@@ -2112,206 +2112,6 @@ int  m_private(cptr, sptr, parc, parv)
 	return m_message(cptr, sptr, parc, parv, 0);
 }
 
-
-/*
- * Built in services aliasing for ChanServ, Memoserv, NickServ and
- * OperServ. This not only is an alias, but is also a security measure,
- * because PRIVMSG's arent sent to 'ChanServ' they are now sent to
- * 'ChanServ@Services.Network.Org' so nobody can snoop /cs commands :)
- */
-
-int  m_chanserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(ChanServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    ChanServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], ChanServ);
-}
-
-int  m_memoserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(MemoServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    MemoServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], MemoServ);
-}
-
-int  m_nickserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(NickServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    NickServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], NickServ);
-}
-
-int  m_botserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(BotServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    BotServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], BotServ);
-}
-
-int  m_infoserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(InfoServ, NULL)))
-	{
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    InfoServ, SERVICES_NAME, parv[1]);
-	}
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], InfoServ);
-}
-int  m_operserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-	if (SERVICES_NAME && (acptr = find_person(OperServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    OperServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], OperServ);
-}
-
-int  m_helpserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-	aClient *acptr;
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (SERVICES_NAME && (acptr = find_person(HelpServ, NULL)))
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    HelpServ, SERVICES_NAME, parv[1]);
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], HelpServ);
-}
-
-int  m_statserv(cptr, sptr, parc, parv)
-	aClient *cptr, *sptr;
-	int  parc;
-	char *parv[];
-{
-
-	aClient *acptr;
-
-
-
-	if (parc < 2 || *parv[1] == '\0')
-	{
-		sendto_one(sptr, err_str(ERR_NOTEXTTOSEND), me.name, parv[0]);
-		return -1;
-	}
-
-	if (STATS_SERVER && (acptr = find_person(StatServ, NULL)))
-#ifndef STATSERV_ABSOLUTE
-		if (!strncmp(acptr->srvptr->name, STATS_SERVER,
-		    strlen(STATS_SERVER)))
-		{
-			sendto_one(acptr, ":%s PRIVMSG %s :%s", parv[0],
-			    StatServ, parv[1]);
-		}
-		else
-		{
-			sendto_one(sptr,
-			    ":%s NOTICE %s :*** Couldn't send to %s due to my setting of StatServ is not equal to what server it is on",
-			    me.name, sptr->name, StatServ);
-			return;
-		}
-#else
-		sendto_one(acptr, ":%s PRIVMSG %s@%s :%s", parv[0],
-		    StatServ, STATS_SERVER, parv[1]);
-#endif
-	else
-		sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name,
-		    parv[0], StatServ);
-}
-
-
 /*
  * Automatic NickServ/ChanServ direction for the identify command
  * -taz
@@ -2402,12 +2202,12 @@ int  m_services(cptr, sptr, parc, parv)
 	{
 		tmps++;
 		if (*tmps == '#')
-			return m_chanserv(cptr, sptr, parc, parv);
+			return m_alias(cptr, sptr, parc, parv, "ChanServ");
 		else
-			return m_nickserv(cptr, sptr, parc, parv);
+			return m_alias(cptr, sptr, parc, parv, "NickServ");
 	}
 
-	return m_nickserv(cptr, sptr, parc, parv);
+	return m_alias(cptr, sptr, parc, parv, "NickServ");
 
 }
 
