@@ -802,3 +802,5 @@ seen. gmtime warning still there
 - Http proxy scanner cleanup
 - Added SOCKS5 detection based on code in Epona
 - Cleaned up /mode a bit
+- Cleaned up command parsing a bit (faster)
+- Added config directive alias for services/bot aliases
